fix bug in sticky component caused by overflow property on body

--- a/style.css
+++ b/style.css
@@ -11,11 +11,6 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body {
-  width:100%;
-  overflow-x: hidden;
-}
-
 .gradient-text {
   background-image: linear-gradient(90deg, #7e22ce, #2564eb);
   -webkit-background-clip: text;
